--- a/src/main/webapp/resources/scss/app/_vaccine.scss
+++ b/src/main/webapp/resources/scss/app/_vaccine.scss
@@ -77,22 +77,28 @@
 		}
 	}
 	
-	.location-percentage-info-wrapper {
+	.location-collection {
 		background-color : var(--white-color);
 		border-radius : 25px;
 		padding : 30px;
 		margin-top : 20px;
-		height : 500px;
 		text-align : center;
 		
-		.location-percentage-info-title {
+		.location-collection-title {
 			
 			color : black;
 			font-weight : bold;
 			font-size : var(--font-regular);
 		}
+		.location-chart-wrapper {
+			background-color : white;
+			border-radius : 25px;
+			border: 1px lightblue solid;
+			margin-top : 30px;
+			
+		}
 		.locationChart {
-			width : 100%;
+			
 			height : 350px;
 			margin-top:50px;
 		}
