--- a/src/main/webapp/resources/scss/app/_nav.scss
+++ b/src/main/webapp/resources/scss/app/_nav.scss
@@ -26,6 +26,7 @@
 		
 		.nav-info-icons-wrapper{
 			display:flex;
+			padding-right: 12px;
 			padding-top:5px;
 			align-items:center;
 			height: 100%;
@@ -55,7 +56,8 @@
 		display : flex;
 		
 		.nav-link {
-			
+			padding-right:0px;
+			padding-left: 0px;
 			font-size : 16px;
 			margin : 0 6px;
 			margin-top :15px;
