navbar 디자인 변경

--- a/src/main/webapp/resources/scss/app/_nav.scss
+++ b/src/main/webapp/resources/scss/app/_nav.scss
@@ -52,6 +52,15 @@
 		}
 	}
 	
+	.dropdown{
+		.btn{
+			font-size: 10px;
+			border-style: none;
+			background-color: var(--skyblue-color);
+			color:var(--grey-dark-color);
+		}
+	}
+	
 	.navbar-user-wrapper {	
 		display : flex;
 		
