--- a/src/main/webapp/resources/handlebars/home-chart.hbs
+++ b/src/main/webapp/resources/handlebars/home-chart.hbs
@@ -1,5 +1,5 @@
-<div class="col-4">
-    <div class="corona-info-chart-wrapper">
+<div class="col-lg-4 col-md-12">
+    <div class="corona-info-chart-wrapper" id="{{type}}-chart-card">
         <span class="corona-info-chart-title">
             {{name}}
         </span><br>
