--- a/src/main/webapp/resources/scss/app/_authjoin.scss
+++ b/src/main/webapp/resources/scss/app/_authjoin.scss
@@ -30,7 +30,7 @@
 				.id_size{color:red; display:none;}
 				.date-over{color:red; display:none;}
 				.date-formatError{color:red; display:none;}
-				.password_check1{color:red; display:none;}
+				.password_check1{color:blue; display:none;}
 				.password_check2{color:red; display:none;}
 				.email_ok{color:blue; display: none;}
 				.email_already{color:red; display: none;}
